--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libesmtp-1.0.6.tar.gz": 0ec66c3aec1f0ef3bb3f6d68c9e04bbbd94701ea
+  libESMTP-1.1.0.tar.gz: 2698f415ad19b69d651555018cb5f63975150f07
